--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "Chiacchierata",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -690,35 +690,6 @@
  	 	 	 	"eng": "Long press to go back to city"
  	 	 	}
  	 	},
- 	 	"machineCrafting": {
- 	 	 	"titleBox": {
- 	 	 	 	"tile": {
- 	 	 	 	 	"trans": "Sistema in attesa",
- 	 	 	 	 	"eng": "system idle"
- 	 	 	 	},
- 	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "Si prega di inserire un oggetto",
- 	 	 	 	 	"eng": "Please inset an item"
- 	 	 	 	}
- 	 	 	},
- 	 	 	"selectItemButton": {
- 	 	 	 	"trans": "Riciclare l'oggetto",
- 	 	 	 	"eng": "Recycle Item"
- 	 	 	},
- 	 	 	"selectAmount": {
- 	 	 	 	"title": {
- 	 	 	 	 	"trans": "Si prega di selezionare la quantità",
- 	 	 	 	 	"eng": "Please select amount"
- 	 	 	 	},
- 	 	 	 	"subtitle": {
- 	 	 	 	 	"vars": [
- 	 	 	 	 	 	"timeStr"
- 	 	 	 	 	],
- 	 	 	 	 	"trans": "Questo impiegherà ${timeStr}",
- 	 	 	 	 	"eng": "This will take ${timeStr}"
- 	 	 	 	}
- 	 	 	}
- 	 	},
  	 	"notificationCenter": {
  	 	 	"deleteTip": {
  	 	 	 	"trans": "Premere a lungo per eliminare",
@@ -825,6 +796,21 @@
  	 	 	"bioNotFound": {
  	 	 	 	"trans": "Redattato",
  	 	 	 	"eng": "REDACTED"
+ 	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "confidenziale",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "Proprietà di SLPD",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "File creato su ${date}",
+ 	 	 	 	"eng": "file created at ${date}"
  	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "Numero di membri",
@@ -1012,7 +998,7 @@
  	 	 	},
  	 	 	"marketShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Amadon",
+ 	 	 	 	 	"trans": "Ragazzi",
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
@@ -1099,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "Potresti ottenere Ai Core da: \n         - Scavenga in varie località \n         - Crafting con i processori hash e gli scarti tech \n         - Saccheggio dai nemici in tutte le località",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1222,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Si prega di inserire un oggetto",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1476,6 +1462,10 @@
  	 	 	 	 	"trans": "Emblemi",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "Posseduto",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "Acquista emblema?",
@@ -1487,10 +1477,6 @@
  	 	 	 	 	 	"trans": "Seleziona Emblem?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "Posseduto",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1593,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Visualizza profilo",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "calcia il giocatore",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "Sei sicuro di voler espellere questo giocatore dalla tua Gang?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1626,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} exp",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Elimina la banda",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1851,6 +1851,15 @@
  	 	 	 	"eng": "Create Account?"
  	 	 	}
  	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Devi essere almeno un livello ${level} per chattare",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
+ 	 	 	}
+ 	 	},
  	 	"noPrintableCaches": {
  	 	 	"title": {
  	 	 	 	"trans": "Cassa dell'attrezzatura non trovata",
@@ -1985,7 +1994,7 @@
  	 	 	 	"eng": "dungeon"
  	 	 	},
  	 	 	"social": {
- 	 	 	 	"trans": "social",
+ 	 	 	 	"trans": "sociale",
  	 	 	 	"eng": "social"
  	 	 	},
  	 	 	"keys": {
@@ -2153,12 +2162,19 @@
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
  	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time} fa",
+ 	 	 	"eng": "${time} ago"
+ 	 	},
  	 	"systemStandby": {
  	 	 	"trans": "System Standby",
  	 	 	"eng": "System standby"
  	 	},
  	 	"password": {
- 	 	 	"trans": "Password",
+ 	 	 	"trans": "Parola d'ordine",
  	 	 	"eng": "Password"
  	 	}
  	},
@@ -2656,7 +2672,7 @@
  	 	 	},
  	 	 	"social": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "social",
+ 	 	 	 	 	"trans": "sociale",
  	 	 	 	 	"eng": "social"
  	 	 	 	}
  	 	 	},
@@ -4633,7 +4649,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Un mercato sotterraneo pieno di persone con tutti i tipi di offerte ombreggiate e sacchetti rari. \r\n         Stampa e vendi le tue cache al qui per guadagnare denaro veloce",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
