--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -797,6 +797,21 @@
  	 	 	 	"trans": "編成済",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "信頼",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "SLPDのプロパティ",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${date}で作成されたファイル",
+ 	 	 	 	"eng": "file created at ${date}"
+ 	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "メンバー数",
  	 	 	 	"eng": "Number of members"
@@ -1070,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "AIコアの入手方法： \n          - さまざまなエリアでの収集 \n          - ハッシュプロセッサーとテックスクラップを使用してのクラフト \n          - 敵からのドロップアイテム（すべてのエリアでドロップします）",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1193,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "アイテムを挿入してください",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1447,6 +1462,10 @@
  	 	 	 	 	"trans": "エンブレム",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "所有済",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "エンブレムを購入しますか？",
@@ -1458,10 +1477,6 @@
  	 	 	 	 	 	"trans": "エンブレムを選択してください",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "所有済",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1564,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "プロフィールを見る",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "キックプレーヤー",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "本当にこのプレイヤーをギャングから追放しますか？",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1597,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} EXP",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "ギャングを削除します",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1822,6 +1851,15 @@
  	 	 	 	"eng": "Create Account?"
  	 	 	}
  	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "チャットするには、少なくともレベル${level}である必要があります",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
+ 	 	 	}
+ 	 	},
  	 	"noPrintableCaches": {
  	 	 	"title": {
  	 	 	 	"trans": "装備のキャッシュが見つかりません",
@@ -2023,7 +2061,7 @@
  	 	 	"eng": "Equipped"
  	 	},
  	 	"ok": {
- 	 	 	"trans": "OK",
+ 	 	 	"trans": "わかった",
  	 	 	"eng": "OK"
  	 	},
  	 	"level": {
@@ -2123,6 +2161,13 @@
  	 	 	 	"trans": "名前には英語の文字, 数字, 「_」のみを含めることができます",
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
+ 	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time} ago",
+ 	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
  	 	 	"trans": "システム待機",
@@ -4270,7 +4315,7 @@
  	 	 	 	 	"イカしたプロフィール欄...欲しくない？",
  	 	 	 	 	"あなた, センスがありそうね！ どうかしら, うちでクールなスタイルにしてかない？",
  	 	 	 	 	"美しくなるためのヒント その1 ： なんと, 色は世界の半分を構築しています！",
-          "あぁ！メイ！来てくれたの！！……って、ごめんなさい。人違いだわ。"
+ 	 	 	 	 	"あぁ！メイ！来てくれたの！！……って、ごめんなさい。人違いだわ。"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4333,7 +4378,7 @@
  	 	 	 	 	"プリントするのってすっごい楽しいんだよね～！",
  	 	 	 	 	"🎵 あたしは孤独なプリント職人～ 🎶 誰もあたしに友達をプリントしちゃあくれないのさ～ 🎵",
  	 	 	 	 	"ちょっと, ピザをプリントしようとするのやめてくれる？ ソースがマシンに詰まっちゃう！",
-          "メイ…またDexterのところに行ってたんでしょ？で、今度は何？あっちのお客さんが見てるから話なら裏で聞くよ"
+ 	 	 	 	 	"メイ…またDexterのところに行ってたんでしょ？で、今度は何？あっちのお客さんが見てるから話なら裏で聞くよ"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -4389,8 +4434,8 @@
  	 	 	 	 	"バーでさぁ, 3人も刺し殺してるヤベー奴を見ちゃったことあるんだよね...エンピツで.",
  	 	 	 	 	"バーバ・ヤーガの方かい？ いらっしゃい.",
  	 	 	 	 	"ブギーマン！？ ...なんだ, アンタか. びっくりしたよ",
-          "メイ…いい加減その悪趣味なタトゥーを変えたらどうだい？片想いで相手の名前を入れるなんて……",
-          "メイ、入ってくるときは裏から入ってくれよ.周りの客に聞かれるのはまずいだろう？ほら、彼が見てる."
+ 	 	 	 	 	"メイ…いい加減その悪趣味なタトゥーを変えたらどうだい？片想いで相手の名前を入れるなんて……",
+ 	 	 	 	 	"メイ、入ってくるときは裏から入ってくれよ.周りの客に聞かれるのはまずいだろう？ほら、彼が見てる."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -4412,7 +4457,7 @@
  	 	 	 	 	"やぁ, 冒険者. 君が見据えているのは, その銃に託した未来かな？ それとも過去？",
  	 	 	 	 	"カギがあれば, どんな駅だってコンテナだってロック解除できるんだ. 最高のツールさ. ま, 仕事終わりの一杯の方が最高だけどね！",
  	 	 	 	 	"全てのカギには, それを使って開けるためのものがあるんだ.",
-          "メイ,君が治安維持部隊の配属になった話は本当かい？……はは、冗談だよ.そこの君、今のは冗談だから気にしないでくれよ！"
+ 	 	 	 	 	"メイ,君が治安維持部隊の配属になった話は本当かい？……はは、冗談だよ.そこの君、今のは冗談だから気にしないでくれよ！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
@@ -4467,7 +4512,7 @@
  	 	 	 	 	"更衣室はあっちだぜ...",
  	 	 	 	 	"おい, とっとと買い物を済ませてくれ. さっきからトイレに行きたいんだ.",
  	 	 	 	 	"おい, 見てみろ！ 面白いモンを見つけたぜ...",
-          "メイ,お前がそんな軍用品ばっかり持ち込むと周りの客が迷惑だろうが.で、用件は？その武器の持ち主なら心当たりがある.続きは裏で話そう."
+ 	 	 	 	 	"メイ,お前がそんな軍用品ばっかり持ち込むと周りの客が迷惑だろうが.で、用件は？その武器の持ち主なら心当たりがある.続きは裏で話そう."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -4574,7 +4619,7 @@
  	 	 	 	 	"持ち物を全部ポケットに突っ込む必要はないんだぜ.",
  	 	 	 	 	"さぁ取引だ. お前さんは中古のバッグをたくさん持ってくる, 俺は新しいバッグを渡す.",
  	 	 	 	 	"ふらついてるように見えるぞ. 荷物を背負いきれてないんじゃないか？",
-          "メイ……今は''センパイ''だったな.話は裏で聞く.",
+ 	 	 	 	 	"メイ……今は''センパイ''だったな.話は裏で聞く.",
  	 	 	 	 	"バッグが入り用なときはウチに来い. バックパックもある."
  	 	 	 	],
  	 	 	 	"eng": [
@@ -4611,7 +4656,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "後ろ暗い取引や珍しいアイテムを抱えた人間で溢れかえる非合法市場. \r\n         ここでキャッシュをプリント・売却すれば, 手っ取り早く資金を稼ぐことができる",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
