--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -797,6 +797,21 @@
  	 	 	 	"trans": "ОТРЕДАКТИРОВАНО",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "конфиденциально",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "Свойство SLPD",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Файл, созданный в ${date}",
+ 	 	 	 	"eng": "file created at ${date}"
+ 	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "Количество участников",
  	 	 	 	"eng": "Number of members"
@@ -1070,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "Вы можете получить ядра AI: \n         - Будучить в разных местах \n         - Ремесло с хеш-процессорами и технологическими отбросами \n         - грабеж от врагов во всех местах",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1193,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Вставьте предмет",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1447,6 +1462,10 @@
  	 	 	 	 	"trans": "Эмблемы",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "владелец",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "Купить эмблему?",
@@ -1458,10 +1477,6 @@
  	 	 	 	 	 	"trans": "Выберите эмблему?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "владелец",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1564,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Просмотреть профиль",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "Удар игрок",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "Вы уверены, что хотите выгнать этого игрока из вашей банды?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1597,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} опыта",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Удалить банду",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1820,6 +1849,15 @@
  	 	 	"registerPageButton": {
  	 	 	 	"trans": "Создать учетную запись?",
  	 	 	 	"eng": "Create Account?"
+ 	 	 	}
+ 	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Вам нужно быть как минимум ровно ${level}, чтобы поболтать",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
  	 	 	}
  	 	},
  	 	"noPrintableCaches": {
@@ -2123,6 +2161,13 @@
  	 	 	 	"trans": "Имя может содержать только английские буквы, цифры и «_»",
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
+ 	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time} назад",
+ 	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
  	 	 	"trans": "Режим ожидания",
@@ -4397,7 +4442,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Подземный рынок, наполненный людьми со всеми видами тенистых сделок и редких добычей. \r\n         Распечатать и продавайте свои кеши на здесь, чтобы заработать быстрые деньги",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
