--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -797,6 +797,21 @@
  	 	 	 	"trans": "SANSÜRLENMİŞ",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "gizli",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "SLPD'nin mülkü",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Dosya ${date} adresinden oluşturuldu",
+ 	 	 	 	"eng": "file created at ${date}"
+ 	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "Üye sayısı",
  	 	 	 	"eng": "Number of members"
@@ -1070,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "AI çekirdeklerini alabilirsiniz: \n         - Çeşitli yerlerde çöpçü \n         - Hash işlemcileri ve teknoloji hurdaları ile işlenmesi \n         - Tüm yerlerde düşmanlardan yağma",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1193,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Lütfen bir eşya yerleştirin",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1447,6 +1462,10 @@
  	 	 	 	 	"trans": "Amblem",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "ait",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "Amblemi satın almak?",
@@ -1458,10 +1477,6 @@
  	 	 	 	 	 	"trans": "Amblemi seçmek?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "ait",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1564,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Profili Görüntüle",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "tekme oyuncusu",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "Bu oyuncuyu çetenizden atmak istediğinize emin misiniz?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1597,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} deneyim puanı",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Çeteyi sil",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1820,6 +1849,15 @@
  	 	 	"registerPageButton": {
  	 	 	 	"trans": "Kayıt ol?",
  	 	 	 	"eng": "Create Account?"
+ 	 	 	}
+ 	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sohbet etmek için en az seviye ${level} olmalısınız",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
  	 	 	}
  	 	},
  	 	"noPrintableCaches": {
@@ -2123,6 +2161,13 @@
  	 	 	 	"trans": "İsim yalnızca İngilizce harfleri, sayıları ve \"_\" içerebilir",
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
+ 	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time} önce",
+ 	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
  	 	 	"trans": "Sistem beklemede",
@@ -4397,7 +4442,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Her türlü gölgeli fırsatlar ve nadir görülen insanlarla dolu bir yeraltı pazarı. \r\n         Hızlı para kazanmak için önbelleklerini buraya yazdırın ve sat",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
