--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -175,7 +175,7 @@
  	 	"supportUkraine": {
  	 	 	"description": {
  	 	 	 	"trans": "Люди України, Росії, та всього світу страждають через амбіції однієї людини.\n Поширюйте любов, не війну",
- 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\n Make love exploit, not war."
+ 	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
  	 	"bank": {
@@ -797,6 +797,21 @@
  	 	 	 	"trans": "Редаговано",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "конфіденційний",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "Власність SLPD",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Файл, створений за адресою ${date}",
+ 	 	 	 	"eng": "file created at ${date}"
+ 	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "Кількість членів",
  	 	 	 	"eng": "Number of members"
@@ -993,7 +1008,7 @@
  	 	 	},
  	 	 	"abortWarning": {
  	 	 	 	"trans": "використані матеріали будуть втрачені при скасуванні",
- 	 	 	 	"eng": "By aborting this you won't receive any reward and the material used won't be returned"
+ 	 	 	 	"eng": "By aborting this you won\\'t receive any reward and the material used won\\'t be returned"
  	 	 	}
  	 	},
  	 	"playerStatus": {
@@ -1070,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "Ви можете отримати Ai ядра наступним чином: \n         - Пошпортайтесь в різних місцях \n         - Виготовте з хеш-процесора і техно-шматочків \n         - поборовши ворогів у будь-якій локації",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1193,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Буда ласка вставте річ",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1447,6 +1462,10 @@
  	 	 	 	 	"trans": "Емблеми",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "уже є",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "Придбати емблеми?",
@@ -1458,10 +1477,6 @@
  	 	 	 	 	 	"trans": "Оберіть Емблему",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "уже є",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1564,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Перегляд профілю",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "Гриновий гравець",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "ви впевнені, що хочете вигнати цього гравця з ватаги?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1597,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} досвіду",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Видалити банду",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1620,7 +1649,7 @@
  	 	"craftingPage": {
  	 	 	"onlyShowCraftable": {
  	 	 	 	"trans": "Приховати рецепти, які ви не можете створити",
- 	 	 	 	"eng": "Hide recipes that you can't craft"
+ 	 	 	 	"eng": "Hide recipes that you can\\'t craft"
  	 	 	},
  	 	 	"title": {
  	 	 	 	"trans": "Виготовлення",
@@ -1820,6 +1849,15 @@
  	 	 	"registerPageButton": {
  	 	 	 	"trans": "Зареєструватися?",
  	 	 	 	"eng": "Create Account?"
+ 	 	 	}
+ 	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Вам потрібно бути принаймні рівнем ${level}, щоб поспілкуватися",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
  	 	 	}
  	 	},
  	 	"noPrintableCaches": {
@@ -2123,6 +2161,13 @@
  	 	 	 	"trans": "Ім'я може містити лише англійські літери, цифри та \"_\"",
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
+ 	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time} тому",
+ 	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
  	 	 	"trans": "Очікування",
@@ -4598,7 +4643,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Чорний ринок, наповнений людьми з найрізноманітнішими підозрілими пропозиціями та речима. \r\n         Друкуйте і продавайте свої схеми тут, щоб заробити швидкі гроші",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
@@ -5664,7 +5709,7 @@
  	 	 	},
  	 	 	"dontShowAgain": {
  	 	 	 	"trans": "Не показувати цю трансляцію знову",
- 	 	 	 	"eng": "Don't show this broadcast again"
+ 	 	 	 	"eng": "Don\\'t show this broadcast again"
  	 	 	}
  	 	},
  	 	"resultScreen": {
@@ -5824,7 +5869,7 @@
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Це звання довічне. \n Воно залишається з вашим обліковим записом назавжди.",
- 	 	 	"eng": "This title will never expire.\nIt stays with your account forever."
+ 	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
  	"cosmetic": {
