--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -797,6 +797,21 @@
  	 	 	 	"trans": "Rédige une biographie",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "confidentielle",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "Propriété de SLPD",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Fichier créé à ${date}",
+ 	 	 	 	"eng": "file created at ${date}"
+ 	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "Nombre de membres",
  	 	 	 	"eng": "Number of members"
@@ -1070,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "Tu peux obtenir des Cœurs d'IA en: \n         - Fouillant dans divers endroits \n         - Les créant avec des Cœurs de hash et des pièces technologiques \n         - Pillant des ennemis",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1193,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Insére un objet",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1447,6 +1462,10 @@
  	 	 	 	 	"trans": "Emblèmes",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "possédé",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "Acheter l'emblème ?",
@@ -1458,10 +1477,6 @@
  	 	 	 	 	 	"trans": "Sélectionner l'emblème ?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "possédé",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1564,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "Voir le profil",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "coup de pied",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "Es-tu sûr de vouloir exclure ce joueur de ton gang ?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1597,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} exp",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "Supprimer un gang",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1820,6 +1849,15 @@
  	 	 	"registerPageButton": {
  	 	 	 	"trans": "S'inscrire ?",
  	 	 	 	"eng": "Create Account?"
+ 	 	 	}
+ 	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Vous devez être au moins de niveau ${level} pour discuter",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
  	 	 	}
  	 	},
  	 	"noPrintableCaches": {
@@ -2123,6 +2161,13 @@
  	 	 	 	"trans": "Le nom ne peut contenir que des lettres anglaises, des chiffres et \"_\"",
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
+ 	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time}",
+ 	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
  	 	 	"trans": "Veille du système",
@@ -4292,7 +4337,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Terminal",
+ 	 	 	 	"trans": "Terminale",
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
@@ -4397,7 +4442,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Un marché souterrain rempli de marchands aussi douteux que les offres qu'ils proposent. \r\n         Imprime et vends tes plans ici pour gagner de l'argent facile",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
