--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -797,6 +797,21 @@
  	 	 	 	"trans": "[기록 검열됨]",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
+ 	 	 	"decoration1": {
+ 	 	 	 	"trans": "비밀의",
+ 	 	 	 	"eng": "confidential"
+ 	 	 	},
+ 	 	 	"decoration2": {
+ 	 	 	 	"trans": "SLPD의 속성",
+ 	 	 	 	"eng": "Property of SLPD"
+ 	 	 	},
+ 	 	 	"accountCreated": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"date"
+ 	 	 	 	],
+ 	 	 	 	"trans": "${date}에서 생성 된 파일",
+ 	 	 	 	"eng": "file created at ${date}"
+ 	 	 	},
  	 	 	"numOfMember": {
  	 	 	 	"trans": "갱단 인원",
  	 	 	 	"eng": "Number of members"
@@ -1070,7 +1085,7 @@
  	 	 	 	 	},
  	 	 	 	 	"description": {
  	 	 	 	 	 	"trans": "AI 코어를 얻을 수 있습니다 : \n         - 다양한 위치에서 노획하십시오 \n         - Hash 프로세서 및 공학 조각으로 제작 \n         - 모든 곳에서 적을 약탈합니다",
- 	 	 	 	 	 	"eng": "You may get AI Cores by: \n        - Scavenge in various locations\n        - Crafting with Hash Processors and Tech Scraps\n        - Looting from enemies in all locations"
+ 	 	 	 	 	 	"eng": "You may get AI Cores by: \r\n        - Scavenge in various locations\r\n        - Crafting with Hash Processors and Tech Scraps\r\n        - Looting from enemies in all locations"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"common": {
@@ -1193,7 +1208,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "아이템을 넣으세요",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
@@ -1447,6 +1462,10 @@
  	 	 	 	 	"trans": "엠블럼",
  	 	 	 	 	"eng": "Emblems"
  	 	 	 	},
+ 	 	 	 	"owned": {
+ 	 	 	 	 	"trans": "보유중",
+ 	 	 	 	 	"eng": "owned"
+ 	 	 	 	},
  	 	 	 	"buyConfirm": {
  	 	 	 	 	"title": {
  	 	 	 	 	 	"trans": "엠블럼을 구매하시겠습니까?",
@@ -1458,10 +1477,6 @@
  	 	 	 	 	 	"trans": "엠블럼을 선택하시겠습니까?",
  	 	 	 	 	 	"eng": "Select Emblem?"
  	 	 	 	 	}
- 	 	 	 	},
- 	 	 	 	"owned": {
- 	 	 	 	 	"trans": "보유중",
- 	 	 	 	 	"eng": "owned"
  	 	 	 	}
  	 	 	},
  	 	 	"donationTiers": {
@@ -1564,6 +1579,16 @@
  	 	 	}
  	 	},
  	 	"gang": {
+ 	 	 	"playerPopup": {
+ 	 	 	 	"viewProfile": {
+ 	 	 	 	 	"trans": "프로필보기",
+ 	 	 	 	 	"eng": "View Profile"
+ 	 	 	 	},
+ 	 	 	 	"kickPlayer": {
+ 	 	 	 	 	"trans": "킥 플레이어",
+ 	 	 	 	 	"eng": "kick player"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"confirmKickMember": {
  	 	 	 	"trans": "당신의 갱단에서 이 플레이어를 추방하시겠습니까?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
@@ -1597,6 +1622,10 @@
  	 	 	 	 	"trans": "${expContribution} 경험치",
  	 	 	 	 	"eng": "${expContribution} exp"
  	 	 	 	}
+ 	 	 	},
+ 	 	 	"deleteGang": {
+ 	 	 	 	"trans": "갱 삭제",
+ 	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
  	 	"coupon": {
@@ -1633,7 +1662,7 @@
  	 	 	 	"eng": "Next Login Period"
  	 	 	},
  	 	 	"day": {
- 	 	 	 	"trans": "Day",
+ 	 	 	 	"trans": "낮",
  	 	 	 	"eng": "Day"
  	 	 	},
  	 	 	"canClaim": {
@@ -1820,6 +1849,15 @@
  	 	 	"registerPageButton": {
  	 	 	 	"trans": "계정을 만드시겠습니까?",
  	 	 	 	"eng": "Create Account?"
+ 	 	 	}
+ 	 	},
+ 	 	"mail": {
+ 	 	 	"levelRequiredToChat": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"level"
+ 	 	 	 	],
+ 	 	 	 	"trans": "채팅하려면 적어도 ${level}이어야합니다",
+ 	 	 	 	"eng": "You need to be at least level ${level} to chat"
  	 	 	}
  	 	},
  	 	"noPrintableCaches": {
@@ -2123,6 +2161,13 @@
  	 	 	 	"trans": "이름은 영어 문자, 숫자 및 \"_\"만 포함 할 수 있습니다",
  	 	 	 	"eng": "Name can only contain English letters, numbers and \"_\""
  	 	 	}
+ 	 	},
+ 	 	"onlineAgo": {
+ 	 	 	"vars": [
+ 	 	 	 	"time"
+ 	 	 	],
+ 	 	 	"trans": "${time} 전",
+ 	 	 	"eng": "${time} ago"
  	 	},
  	 	"systemStandby": {
  	 	 	"trans": "시스템 대기중",
@@ -4209,22 +4254,22 @@
  	 	"unitExchange": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"유닛을 구매하거나 사용하시겠습니까?",
-					"오늘도 들러주셔서 감사합니다.",
-					"시냅스 가속 송신기를 개발하는 데 정말 많은 시간이 걸렸다는 걸 아시나요?",
-					"오늘도 신상 시냅스 가속 송신기가 들어왔어요. 한 번 보시겠어요?",
-					"아라사카 유닛 거래소에 오신 걸 환영합니다.",
-					"사실 지금의 시냅스 가속 송신기는 두 번째 버전이라는 걸 아시나요?",
-					"명심하세요, 일반 시냅스 가속 송신기와 희귀 시냅스 가속 송신기는 비교 자체가 불가능하답니다!",
-					"BTC요? 저희는 UNIT만 취급한답니다.",
-					"은행에서 일하는 로시를 아시나요? 같이 학교에 등교하던 사이였답니다.",
-					"트리노키 마트의 의사님을 만나보는 건 어때요? 별로 안색이 안 좋아 보이시는군요.",
-					"언제나 강조하지만, 이곳 대부분의 사람들은 친절하답니다.",
-					"재미있게 다녀온 곳이 있나요? 저는 막 네오-일본 여행을 마치고 돌아온 참이랍니다.",
-					"추운 날에 따뜻한 아메리카노만한 게 없죠. 안 그런가요?",
-					"세계적 시냅스 가속 송신은 언제 일어날지 모르죠. 항상 주의를 기울이셔야 합니다.",
-					"이기려고 과금하지 않는 게임. 얼마나 멋진가요!",
-					"모두가 당신의 구매로 이득을 본답니다. 개발자도 말이죠."
+ 	 	 	 	 	"유닛을 구매하거나 사용하시겠습니까?",
+ 	 	 	 	 	"오늘도 들러주셔서 감사합니다.",
+ 	 	 	 	 	"시냅스 가속 송신기를 개발하는 데 정말 많은 시간이 걸렸다는 걸 아시나요?",
+ 	 	 	 	 	"오늘도 신상 시냅스 가속 송신기가 들어왔어요. 한 번 보시겠어요?",
+ 	 	 	 	 	"아라사카 유닛 거래소에 오신 걸 환영합니다.",
+ 	 	 	 	 	"사실 지금의 시냅스 가속 송신기는 두 번째 버전이라는 걸 아시나요?",
+ 	 	 	 	 	"명심하세요, 일반 시냅스 가속 송신기와 희귀 시냅스 가속 송신기는 비교 자체가 불가능하답니다!",
+ 	 	 	 	 	"BTC요? 저희는 UNIT만 취급한답니다.",
+ 	 	 	 	 	"은행에서 일하는 로시를 아시나요? 같이 학교에 등교하던 사이였답니다.",
+ 	 	 	 	 	"트리노키 마트의 의사님을 만나보는 건 어때요? 별로 안색이 안 좋아 보이시는군요.",
+ 	 	 	 	 	"언제나 강조하지만, 이곳 대부분의 사람들은 친절하답니다.",
+ 	 	 	 	 	"재미있게 다녀온 곳이 있나요? 저는 막 네오-일본 여행을 마치고 돌아온 참이랍니다.",
+ 	 	 	 	 	"추운 날에 따뜻한 아메리카노만한 게 없죠. 안 그런가요?",
+ 	 	 	 	 	"세계적 시냅스 가속 송신은 언제 일어날지 모르죠. 항상 주의를 기울이셔야 합니다.",
+ 	 	 	 	 	"이기려고 과금하지 않는 게임. 얼마나 멋진가요!",
+ 	 	 	 	 	"모두가 당신의 구매로 이득을 본답니다. 개발자도 말이죠."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
@@ -4246,17 +4291,17 @@
  	 	"cosmetic": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"안녕하세요! 멋진 치장 아이템을 얻고, 이 게임과 같은 비 과금 유도 게임을 지원하고 싶다면 기부를 해 주세요!",
-					"월간 구독은 생각해보신 적이 없나요?",
-					"만나서 반가워요. 무슨 일로 오셨나요?",
-					"사람들 사이에서 돋보이고 싶나요? 후원 플랜을 잡아보시는 건 어때요?",
-					"후원 상품을 구매하시면 프로필 사진을 찍어드릴 수 있는데, 어때요?",
-					"최저가 후원 상품은 아메리카노 한 잔 값밖에 안 된답니다. 저한테 한 잔 사준다고 생각해요.",
-					"후원은 당신을 더욱 아름답게 해 주고 게임의 개발을 도운답니다!",
-					"알록달록한 건 좋죠! 색깔을 드릴 수야 있어요. ...돈만 주신다면요.",
-					"당신도 사진을 좋아하고, 저도 좋아하고, 모두가 좋아하죠! 돈만 조금 내시면, 누구든지 가질 수 있어요!",
-					"돈은 세상을 굴러가게 하죠! 당신의 후원이 게임 개발로 먹고 살 수 있게 해준답니다!",
-					"손님은 스타일을 아시는 분인 것 같은걸요! 말만 해봐요, 무슨 스타일이든 돈만 주신다면 가능하답니다."
+ 	 	 	 	 	"안녕하세요! 멋진 치장 아이템을 얻고, 이 게임과 같은 비 과금 유도 게임을 지원하고 싶다면 기부를 해 주세요!",
+ 	 	 	 	 	"월간 구독은 생각해보신 적이 없나요?",
+ 	 	 	 	 	"만나서 반가워요. 무슨 일로 오셨나요?",
+ 	 	 	 	 	"사람들 사이에서 돋보이고 싶나요? 후원 플랜을 잡아보시는 건 어때요?",
+ 	 	 	 	 	"후원 상품을 구매하시면 프로필 사진을 찍어드릴 수 있는데, 어때요?",
+ 	 	 	 	 	"최저가 후원 상품은 아메리카노 한 잔 값밖에 안 된답니다. 저한테 한 잔 사준다고 생각해요.",
+ 	 	 	 	 	"후원은 당신을 더욱 아름답게 해 주고 게임의 개발을 도운답니다!",
+ 	 	 	 	 	"알록달록한 건 좋죠! 색깔을 드릴 수야 있어요. ...돈만 주신다면요.",
+ 	 	 	 	 	"당신도 사진을 좋아하고, 저도 좋아하고, 모두가 좋아하죠! 돈만 조금 내시면, 누구든지 가질 수 있어요!",
+ 	 	 	 	 	"돈은 세상을 굴러가게 하죠! 당신의 후원이 게임 개발로 먹고 살 수 있게 해준답니다!",
+ 	 	 	 	 	"손님은 스타일을 아시는 분인 것 같은걸요! 말만 해봐요, 무슨 스타일이든 돈만 주신다면 가능하답니다."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4278,34 +4323,34 @@
  	 	"printer": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"캐시를 갖고 있다면 원하는건 내가 뭐든 인쇄 해 주지!",
-					"캐시만 들고오면 내가 결과물을 보여줄게.",
-					"이번엔 진짜 에픽 캐시를 들고왔다고 해 줘, 에끡 캐시 말고!",
-					"더 이상 잉크를 쓸 필요가 없는게 얼마나 좋아. 일할 때 스타일을 신경쓸 수도 있고 말이야.",
-					"왜 우리 복사기로 음식을 인쇄할 수는 없는걸까...",
-					"얼그레이 홍차, 뜨거운 걸로! 버블티도 최고야.",
-					"어디, 그 캐시 좀 보자...",
-					"고객을 볼 때마다 신이 난다니까, 에픽을 가지고 올지도 모르잖아!",
-					"가끔 외로워지고는 해. 언젠가는 동행할 반려 로봇이나 안드로이드를 살거야.",
-					"걱정 마, 잉크가 다 떨어지는 일은 없을테니까.",
-					"가끔 바깥 세계는 어떻게 생겼을까 궁금하다니까. 네가 유명해지면 좀 알려줄래?",
-					"인쇄하자, 인쇄하자...",
-					"난 여기 갇혔지만, 넌 아냐. 날 위해서 새 장비로 시원하게 이기고 오는거야!",
-					"난 네 캐시를 받고, 넌 새 장비를 받고.",
-					"그 신상 장비 잘 어울리는데!",
-					"누가 나한테 의족을 좀 인쇄해 줬으면 좋겠다! 이 방 바깥에 뭐가 있는지 보고 싶어...",
-					"총을 인쇄할 수는 있지만, 널 반길 수 있는 내 의수는 인쇄할 수 없어. 웃긴 일이지...",
-					"대체 그만큼 많은 캐시를 들고오려면 얼마나 많은 녀석들이 나가떨어져야하는지 매번 궁금하단 말야.",
-					"아라사카 은행이 인쇄할 여유가 안 나는 캐시를 보관하기 딱 좋은 곳이라던데?",
-					"더 많은 장비를 인쇄하면, 난 더 많은 데이터가 쌓이지. 매일 인쇄 실력이 느는거야!",
-					"아메리카노 좀 인쇄해 줄래? 이걸 다 인쇄하는 건 좀 힘들거든.",
-					"무슨 프린터기를 쓸래. 레이저? 잉크젯?",
-					"야한 사진을 인쇄하러 온 건 아니지?",
-					"감자를... 인쇄해 달라고?",
-					"컬러 잉크가 다 떨어졌는데. 흑백도 괜찮으면 좋겠네!",
-					"비트코인을 인쇄할 수 없는게 얼마나 다행이야.",
-					"미안하지만, 공짜 인쇄는 없어!",
-					"나는 인쇄벌레~🎵친구가 없네~🎵"
+ 	 	 	 	 	"캐시를 갖고 있다면 원하는건 내가 뭐든 인쇄 해 주지!",
+ 	 	 	 	 	"캐시만 들고오면 내가 결과물을 보여줄게.",
+ 	 	 	 	 	"이번엔 진짜 에픽 캐시를 들고왔다고 해 줘, 에끡 캐시 말고!",
+ 	 	 	 	 	"더 이상 잉크를 쓸 필요가 없는게 얼마나 좋아. 일할 때 스타일을 신경쓸 수도 있고 말이야.",
+ 	 	 	 	 	"왜 우리 복사기로 음식을 인쇄할 수는 없는걸까...",
+ 	 	 	 	 	"얼그레이 홍차, 뜨거운 걸로! 버블티도 최고야.",
+ 	 	 	 	 	"어디, 그 캐시 좀 보자...",
+ 	 	 	 	 	"고객을 볼 때마다 신이 난다니까, 에픽을 가지고 올지도 모르잖아!",
+ 	 	 	 	 	"가끔 외로워지고는 해. 언젠가는 동행할 반려 로봇이나 안드로이드를 살거야.",
+ 	 	 	 	 	"걱정 마, 잉크가 다 떨어지는 일은 없을테니까.",
+ 	 	 	 	 	"가끔 바깥 세계는 어떻게 생겼을까 궁금하다니까. 네가 유명해지면 좀 알려줄래?",
+ 	 	 	 	 	"인쇄하자, 인쇄하자...",
+ 	 	 	 	 	"난 여기 갇혔지만, 넌 아냐. 날 위해서 새 장비로 시원하게 이기고 오는거야!",
+ 	 	 	 	 	"난 네 캐시를 받고, 넌 새 장비를 받고.",
+ 	 	 	 	 	"그 신상 장비 잘 어울리는데!",
+ 	 	 	 	 	"누가 나한테 의족을 좀 인쇄해 줬으면 좋겠다! 이 방 바깥에 뭐가 있는지 보고 싶어...",
+ 	 	 	 	 	"총을 인쇄할 수는 있지만, 널 반길 수 있는 내 의수는 인쇄할 수 없어. 웃긴 일이지...",
+ 	 	 	 	 	"대체 그만큼 많은 캐시를 들고오려면 얼마나 많은 녀석들이 나가떨어져야하는지 매번 궁금하단 말야.",
+ 	 	 	 	 	"아라사카 은행이 인쇄할 여유가 안 나는 캐시를 보관하기 딱 좋은 곳이라던데?",
+ 	 	 	 	 	"더 많은 장비를 인쇄하면, 난 더 많은 데이터가 쌓이지. 매일 인쇄 실력이 느는거야!",
+ 	 	 	 	 	"아메리카노 좀 인쇄해 줄래? 이걸 다 인쇄하는 건 좀 힘들거든.",
+ 	 	 	 	 	"무슨 프린터기를 쓸래. 레이저? 잉크젯?",
+ 	 	 	 	 	"야한 사진을 인쇄하러 온 건 아니지?",
+ 	 	 	 	 	"감자를... 인쇄해 달라고?",
+ 	 	 	 	 	"컬러 잉크가 다 떨어졌는데. 흑백도 괜찮으면 좋겠네!",
+ 	 	 	 	 	"비트코인을 인쇄할 수 없는게 얼마나 다행이야.",
+ 	 	 	 	 	"미안하지만, 공짜 인쇄는 없어!",
+ 	 	 	 	 	"나는 인쇄벌레~🎵친구가 없네~🎵"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -4323,20 +4368,20 @@
  	 	"weaponSmith": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"최고의 장비를 찾을 수 있을거야, 나만 믿어.",
-					"장비를 수리해 주지! 돈만 낸다면 말이야.",
-					"나도 너 같은 모험가였지... 그러다가 무릎에 총알을 맞았어.",
-					"혼자 다니면 위험.. 아냐, 신경쓰지마.",
-					"내가 오늘 탐색해서 찾은 것 좀 봐.",
-					"다른 데선 이거보다 좋은 거 못 찾을 걸.",
-					"오늘 얻은 것 중에 관심 가는 거 있어?",
-					"양질의 무기는 이 대장장이에서만 찾을 수 있지.",
-					"당신을 위한 샹그릴라 최고의 무기 대장장이랍니다!",
-					"누구는 이걸 고물이라 부르겠지. 나? 나는 보물이라 불러.",
-					"아이쇼핑 하는곳이 아니라고. 뭐라도 좀 사 봐!",
-					"특별히 찾는 게 있어?",
-					"좋은 무기 가지고 있네? 얼마에 팔 거야?",
-					"언제는 한 사람이 3명을 바에서 죽이는 걸 봤어... 연필 한 자루로 말이야."
+ 	 	 	 	 	"최고의 장비를 찾을 수 있을거야, 나만 믿어.",
+ 	 	 	 	 	"장비를 수리해 주지! 돈만 낸다면 말이야.",
+ 	 	 	 	 	"나도 너 같은 모험가였지... 그러다가 무릎에 총알을 맞았어.",
+ 	 	 	 	 	"혼자 다니면 위험.. 아냐, 신경쓰지마.",
+ 	 	 	 	 	"내가 오늘 탐색해서 찾은 것 좀 봐.",
+ 	 	 	 	 	"다른 데선 이거보다 좋은 거 못 찾을 걸.",
+ 	 	 	 	 	"오늘 얻은 것 중에 관심 가는 거 있어?",
+ 	 	 	 	 	"양질의 무기는 이 대장장이에서만 찾을 수 있지.",
+ 	 	 	 	 	"당신을 위한 샹그릴라 최고의 무기 대장장이랍니다!",
+ 	 	 	 	 	"누구는 이걸 고물이라 부르겠지. 나? 나는 보물이라 불러.",
+ 	 	 	 	 	"아이쇼핑 하는곳이 아니라고. 뭐라도 좀 사 봐!",
+ 	 	 	 	 	"특별히 찾는 게 있어?",
+ 	 	 	 	 	"좋은 무기 가지고 있네? 얼마에 팔 거야?",
+ 	 	 	 	 	"언제는 한 사람이 3명을 바에서 죽이는 걸 봤어... 연필 한 자루로 말이야."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"You will find the best gear here, trust me."
@@ -4350,12 +4395,12 @@
  	 	"terminal": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"다음 구역으로 이동 할 수 있도록 도와드리겠습니다!",
-					"제 딸 이름은 미트라가 아닙니다! 아이 이름으로 장난 치지 마세요!",
-					"준비 되셨나요?",
-					"열쇠는 자물쇠 없인 아무것도 아니죠.",
-					"뭐가 더 중요합니까, 여행자님? 당신의 총인가요, 아니면 과거인가요?",
-					"무엇보다 열쇠가 중요하죠... 달콤한 음료수 빼고 말입니다."
+ 	 	 	 	 	"다음 구역으로 이동 할 수 있도록 도와드리겠습니다!",
+ 	 	 	 	 	"제 딸 이름은 미트라가 아닙니다! 아이 이름으로 장난 치지 마세요!",
+ 	 	 	 	 	"준비 되셨나요?",
+ 	 	 	 	 	"열쇠는 자물쇠 없인 아무것도 아니죠.",
+ 	 	 	 	 	"뭐가 더 중요합니까, 여행자님? 당신의 총인가요, 아니면 과거인가요?",
+ 	 	 	 	 	"무엇보다 열쇠가 중요하죠... 달콤한 음료수 빼고 말입니다."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
@@ -4381,19 +4426,19 @@
  	 	"store": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"이봐 꼬맹이... 이리 와서 내 물건들 좀 확인해 봐.",
-					"다쳤나? 제대로 찾아왔군.",
-					"샹그릴라 최고의 약국이라네.",
-					"환불이나 교환은 안돼. 여긴 자선단체가 아니야.",
-					"여긴 24시간 영업이야. 내 마음이 바뀌기 전까지는.",
-					"트리노키 마트에 온 걸 환영하네. 날 의사님이라 불러도 돼.",
-					"물건을 훔치려고 하면- 난 새 마네킹이 생기는거지 뭐.",
-					"네가 할 수 있는 최선은 여기 오기 전에 지혈이나 하는거야.",
-					"이봐 꼬맹이, 3헬릭스 네트워크라고 들어본 적 있어?",
-					"초밥이 벌에게 인사할때 뭐라 부르는 지 아나? 이봐, 와사비!",
-					"난 신발 재활용 가게에 일하곤 했지. 끔찍함 그 자체였어!",
-					"나는 한때 선명한 전설 특수 무기를 모으는 게 취미였는데, 지금은 봐, 모두 하얗잖나.",
-					"왜 AI 코어를 일만에 파냐고? 제일 만만하니까 그렇지."
+ 	 	 	 	 	"이봐 꼬맹이... 이리 와서 내 물건들 좀 확인해 봐.",
+ 	 	 	 	 	"다쳤나? 제대로 찾아왔군.",
+ 	 	 	 	 	"샹그릴라 최고의 약국이라네.",
+ 	 	 	 	 	"환불이나 교환은 안돼. 여긴 자선단체가 아니야.",
+ 	 	 	 	 	"여긴 24시간 영업이야. 내 마음이 바뀌기 전까지는.",
+ 	 	 	 	 	"트리노키 마트에 온 걸 환영하네. 날 의사님이라 불러도 돼.",
+ 	 	 	 	 	"물건을 훔치려고 하면- 난 새 마네킹이 생기는거지 뭐.",
+ 	 	 	 	 	"네가 할 수 있는 최선은 여기 오기 전에 지혈이나 하는거야.",
+ 	 	 	 	 	"이봐 꼬맹이, 3헬릭스 네트워크라고 들어본 적 있어?",
+ 	 	 	 	 	"초밥이 벌에게 인사할때 뭐라 부르는 지 아나? 이봐, 와사비!",
+ 	 	 	 	 	"난 신발 재활용 가게에 일하곤 했지. 끔찍함 그 자체였어!",
+ 	 	 	 	 	"나는 한때 선명한 전설 특수 무기를 모으는 게 취미였는데, 지금은 봐, 모두 하얗잖나.",
+ 	 	 	 	 	"왜 AI 코어를 일만에 파냐고? 제일 만만하니까 그렇지."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -4407,18 +4452,18 @@
  	 	"bank": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"어서오세요. 무엇을 보관해 드릴까요?",
-					"어서오세요. 오늘은 어떤 서비스를 이용하시겠어요?",
-					"물품보관 창구는 왼쪽에, 예금 창구는 오른쪽에 있습니다.",
-					"안녕하세요, 제 이름은 로시에요. 무엇을 도와드릴까요?",
-					"여러분이 안심할 수 있는 아라사카 은행입니다.",
-					"안심하고 24시간 물건을 보관할 수 있습니다.",
-					"이곳은 도시에서 가장 보안이 철저한 곳입니다.",
-					"안녕하세요, 로시라고 합니다. 무엇을 도와드릴까요?",
-					"또 오셨군요... 무슨 일인가요?",
-					"Finel이라는 여행 방랑자를 마주친 적이 있나요?",
-					"Alpha라는 고객님이 당신의 금고에 에픽이 있냐고 물어보러 왔던데요.",
-					"손님의 ID에 문제가 생긴 것 같습니다. 1 비트코인을 입금해주세요."
+ 	 	 	 	 	"어서오세요. 무엇을 보관해 드릴까요?",
+ 	 	 	 	 	"어서오세요. 오늘은 어떤 서비스를 이용하시겠어요?",
+ 	 	 	 	 	"물품보관 창구는 왼쪽에, 예금 창구는 오른쪽에 있습니다.",
+ 	 	 	 	 	"안녕하세요, 제 이름은 로시에요. 무엇을 도와드릴까요?",
+ 	 	 	 	 	"여러분이 안심할 수 있는 아라사카 은행입니다.",
+ 	 	 	 	 	"안심하고 24시간 물건을 보관할 수 있습니다.",
+ 	 	 	 	 	"이곳은 도시에서 가장 보안이 철저한 곳입니다.",
+ 	 	 	 	 	"안녕하세요, 로시라고 합니다. 무엇을 도와드릴까요?",
+ 	 	 	 	 	"또 오셨군요... 무슨 일인가요?",
+ 	 	 	 	 	"Finel이라는 여행 방랑자를 마주친 적이 있나요?",
+ 	 	 	 	 	"Alpha라는 고객님이 당신의 금고에 에픽이 있냐고 물어보러 왔던데요.",
+ 	 	 	 	 	"손님의 ID에 문제가 생긴 것 같습니다. 1 비트코인을 입금해주세요."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -4440,9 +4485,9 @@
  	 	 	 	 	"장비 강화는 도와줄 수 있지만, 장비가 파괴되더라도 나한테 뭐라 하지 말라고?",
  	 	 	 	 	"내 이름은 카미코야. 저쪽의 미녀는 칼리. 그녀는 약간.. 변덕스러워.",
  	 	 	 	 	"장비 교정 코어를 넣으면 30분 정도 걸려. 여기서 기다릴 수도 있지만.. 그러진 않는게 좋을걸?",
-					"네 장비는 조금... 뭐, 더 좋아질 수 있어. 내가 도와줄게.",
-					"아니. 여기서 교정 코어는 안 팔아. 난 기계를 제공하고, 넌 코어를 제공하지. 그게 이곳의 방식이야.",
-					"장비를 교정할 시간이 드디어 왔구나!"
+ 	 	 	 	 	"네 장비는 조금... 뭐, 더 좋아질 수 있어. 내가 도와줄게.",
+ 	 	 	 	 	"아니. 여기서 교정 코어는 안 팔아. 난 기계를 제공하고, 넌 코어를 제공하지. 그게 이곳의 방식이야.",
+ 	 	 	 	 	"장비를 교정할 시간이 드디어 왔구나!"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -4460,17 +4505,17 @@
  	 	"storageMerchant": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
-					"꼬맹아, 난 리 아저씨다. 너도 알겠지만, 네 주머니에 모든 걸 갖고 다닐 필요는 없어.",
-					"여기는 평범한 가게가 아니란다.",
-					"글쎄, 거래할건가?",
-					"가방이 꽉 차 보이는군. 내가 도와줄 수 있지.",
-					"나는 질보단 양이란다.",
-					"나는 너희들 은어로 틀-인 리 아저씨고, 네가 필요한 걸 찾는다면 틀 리-임없이 제대로 찾아왔지.",
-					"모든 걸 그렇게 지고 다니면 지치지 않나?",
-					"누가 새 가방이 필요해 보이는구나.",
-					"거래를 하자고. 네 낡은 가방을 주렴, 내가 새 가방을 줄거란다.",
-					"난 네가 가방을 가지고 싶을 때 보게 될 사람이란다. 아니면 배낭일 수도 있고.",
-					"아버지 가방에 들어가신다. 우리 가방이라면 틀린 말은 아니란다."
+ 	 	 	 	 	"꼬맹아, 난 리 아저씨다. 너도 알겠지만, 네 주머니에 모든 걸 갖고 다닐 필요는 없어.",
+ 	 	 	 	 	"여기는 평범한 가게가 아니란다.",
+ 	 	 	 	 	"글쎄, 거래할건가?",
+ 	 	 	 	 	"가방이 꽉 차 보이는군. 내가 도와줄 수 있지.",
+ 	 	 	 	 	"나는 질보단 양이란다.",
+ 	 	 	 	 	"나는 너희들 은어로 틀-인 리 아저씨고, 네가 필요한 걸 찾는다면 틀 리-임없이 제대로 찾아왔지.",
+ 	 	 	 	 	"모든 걸 그렇게 지고 다니면 지치지 않나?",
+ 	 	 	 	 	"누가 새 가방이 필요해 보이는구나.",
+ 	 	 	 	 	"거래를 하자고. 네 낡은 가방을 주렴, 내가 새 가방을 줄거란다.",
+ 	 	 	 	 	"난 네가 가방을 가지고 싶을 때 보게 될 사람이란다. 아니면 배낭일 수도 있고.",
+ 	 	 	 	 	"아버지 가방에 들어가신다. 우리 가방이라면 틀린 말은 아니란다."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
@@ -4506,7 +4551,7 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "온갖 종류의 암거래를 하며, 희귀한 전리품을 가진 사람들로 가득찬 지하 시장입니다. \r\n         빠르게 돈을 벌고 싶다면, 여기서 캐시들을 인쇄하고 판매하시면 됩니다.",
- 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches at the here to earn quick money"
+ 	 	 	 	"eng": "An underground market filled with people with all kind of shady deals and rare loots.\r\n        Print and sell your caches here to earn quick money"
  	 	 	}
  	 	}
  	},
